--- a/Proyecto/src/Main/VistaMenu.form
+++ b/Proyecto/src/Main/VistaMenu.form
@@ -183,7 +183,7 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Iconos/icons8-configuraci&#xf3;n-del-administrador-24.png"/>
+              <Image iconType="2" name="C:\Users\Jonathan - David\Desktop\ProyectoFinal\Proyecto\src\Iconos\icons8-configuraci&#xf3;n-del-administrador-24.png"/>
             </Property>
           </Properties>
           <Constraints>
@@ -195,7 +195,7 @@
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Iconos/icons8-usuario-30.png"/>
+              <Image iconType="2" name="C:\Users\Jonathan - David\Desktop\ProyectoFinal\Proyecto\src\Iconos\icons8-usuario-30.png"/>
             </Property>
           </Properties>
           <Constraints>
@@ -207,7 +207,7 @@
         <Component class="javax.swing.JLabel" name="jLabel7">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Iconos/icons8-en-inventario-30.png"/>
+              <Image iconType="2" name="C:\Users\Jonathan - David\Desktop\ProyectoFinal\Proyecto\src\Iconos\icons8-en-inventario-30.png"/>
             </Property>
           </Properties>
           <Constraints>
@@ -219,7 +219,7 @@
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Iconos/icons8-factura-24.png"/>
+              <Image iconType="2" name="C:\Users\Jonathan - David\Desktop\ProyectoFinal\Proyecto\src\Iconos\icons8-factura-24.png"/>
             </Property>
           </Properties>
           <Constraints>
