--- a/Proyecto/src/ModuloAdmin/VistaAdministrador.form
+++ b/Proyecto/src/ModuloAdmin/VistaAdministrador.form
@@ -164,7 +164,7 @@
             <Component class="javax.swing.JLabel" name="jLabel2">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Iconos/proceso-automatizado.png"/>
+                  <Image iconType="2" name="C:\Users\Jonathan - David\Desktop\ProyectoFinal\imagenes\proceso-automatizado.png"/>
                 </Property>
               </Properties>
               <Constraints>
